add go mod tidy

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -13,6 +13,7 @@ jobs:
           go-version: 1.19
       - name: generate swagger docs
         run: |
+          go mod tidy
           go install github.com/swaggo/swag/cmd/swag@latest
           ~/go/bin/swag init --parseDependency --parseInternal
       - name: commit swagger docs
