--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -41,6 +41,7 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           load: true
+          push: true
           tags: ${{ env.TEST_TAG }}
 #      - name: Test
 #        run: |
