--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -39,8 +39,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
-          load: true
+#          load: true
           push: true
           tags: ${{ env.TEST_TAG }}
 #      - name: Test
