--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -39,14 +39,15 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          load: true
-#          push: true
+#          load: true
+          push: true
           tags: ${{ env.TEST_TAG }}
 #      - name: Test
 #        run: |
 #          docker run --rm ${{ env.TEST_TAG }}
   integration-test:
     runs-on: ubuntu-latest
+    needs: [build]
     services:
       postgres:
         image: postgres:15-alpine
