--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,7 +16,7 @@ jobs:
       - name: generate swagger docs
         run: |
           go mod tidy
-          go install github.com/swaggo/swag/cmd/swag@latest
+          go install github.com/swaggo/swag/cmd/swag@v1.8.12
           ~/go/bin/swag init --parseDependency --parseInternal
       - name: commit swagger docs
         uses: stefanzweifel/git-auto-commit-action@v4
