--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,7 @@ jobs:
             linux/amd64
             linux/arm64
             darwin/amd64
-            darwin/arm64
+#            darwin/arm64
           tags: |
             petetanton/klaxn-api:${{ github.ref_name }}
             petetanton/klaxn-api:latest
