remove darwin/amd64 from docker platforms

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
           platforms: |
             linux/amd64
             linux/arm64
-            darwin/amd64
+#            darwin/amd64
 #            darwin/arm64
           tags: |
             petetanton/klaxn-api:${{ github.ref_name }}
