remove otel metrics

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -42,6 +42,9 @@ jobs:
 #          load: true
           push: true
           tags: ${{ env.TEST_TAG }}
+          platforms: |
+            linux/amd64
+            linux/arm64
 #      - name: Test
 #        run: |
 #          docker run --rm ${{ env.TEST_TAG }}
